--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title> Hello World </title>
-</head>
-<body>
+<title>Contact List</title>
 <style>
-#myFirstWebPage{
-	color: blue;
-	front-weight: bold;
-	front-size:58px;
+#Title {						
+	color: black;				
+	font-weight: bold;				
+	font-size:58px;
 }
 </style>
-<p id="myFirstWebPage">Hello World</p>
+</head>
+<body>
+	<p id="Title">Group Project Contact List</p>
+	<table style="width:50%">
+ 	<tr>
+		<th>Name</th>
+		<th>Title	</th>
+		<th>Phone#</th>
+		<th>City</th>
+	</tr>
+	<tr>
+		<td>Hua Gao</td>
+		<td>Project Manager</td>	
+		<td>000-000-0000	</td>
+		<td>Omaha</td>
+	</tr>
+	<tr>
+		<td>Tim McCaslin</td>
+		<td>Scribe</td>	
+		<td>000-000-0000	</td>
+		<td>Lincoln</td>
+	</tr>
+	<tr>
+		<td>Yang Xiao</td>
+		<td>Architect</td>	
+		<td>000-000-0000	</td>
+		<td>Lincoln</td>
+	</tr>
+	<tr>
+		<td>Yifan Shi</td>
+		<td>Quality Assurance</td>	
+		<td>000-000-0000	</td>
+		<td>Omaha</td>
+	</tr>
+	<tr>
+		<td>Yiqun Qian</td>
+		<td>Tech Support</td>	
+		<td>000-000-0000	</td>
+		<td>Lincoln</td>
+	</tr>
+	</table>	
 </body>
 </html>
